# llm-server

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: operations.md
site/: index.md
src/llm_server/: __init__.py  __main__.py  admission.py  api.py  capacity.py  catalog.py  contracts.py  host.py  profiles.py  provenance.py  runtime.py
tests/: test_admission.py  test_api.py  test_capacity.py  test_host.py  test_profiles.py  test_runtime.py
