[project]
name = "llm-server"
version = "0.1.0"
description = "Mac-first local MLX language-model control plane."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Diego Oliveira" }]
dependencies = [
  "fastapi>=0.115,<1",
  "huggingface-hub>=0.30,<1",
  "pydantic>=2.8,<3",
  "rich>=13.9,<14",
  "typer>=0.15,<1",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.26"]
dev = ["pytest>=8.3", "httpx>=0.28", "ruff>=0.9"]

[project.scripts]
llm-server = "llm_server.__main__:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
